--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">MyMaps</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="app_name">SimpleMaps</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCgUWo-Q4L4eb5Gr8LbG4t9WGvUPkKgyMM</string>
+    <string name="google_geo_key" templateMergeStrategy="preserve" translatable="false">AIzaSyApcS4FhvbgGZpF_dQhQ44X30R8l1M9FdE</string>
 </resources>
